--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_WOMPI_PUBLIC_KEY=pub_prod_izvHROR3Ab3vRDitqXbgO37bnkWDzhqO
 VITE_WOMPI_REDIRECT_URL=https://fundacionthecolumbusschool.com/?v=ab6c04006660
 # Pon aquí SOLO la base del backend; el código le agrega el path si falta.
-VITE_WOMPI_SIGN_URL=https://columbus-school.up.railway.app/
-VITE_API_URL=https://columbus-school.up.railway.app/
+VITE_WOMPI_SIGN_URL=https://columbus-school.up.railway.app
+VITE_API_URL=https://columbus-school.up.railway.app
